--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,17 @@
       rel="stylesheet"
     />
     <link
+      rel="stylesheet"
+      type="text/css"
+      charset="UTF-8"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Raleway:400,800,900&display=swap"
       rel="stylesheet"
     />
