--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css?family=Raleway:400,800,900&display=swap"
       rel="stylesheet"
     />
-    <title>Sahar Biton</title>
+    <title>Sahar Biton | saharbit.dev</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
